--- a/public/styles.css
+++ b/public/styles.css
@@ -12,125 +12,40 @@ input[type=number] {
 
 body {
   background-color: rgb(207, 206, 206);
-
 }
 
-.center{
-    text-align: center;
-
-  }
-
-  .header{
-    text-align: center;
-    margin: 0px 0px 30px 0px;
-    
-    
-  }
-
-  .main-form{
-    text-align: center;
-    /* border: 1px solid black; */
-    margin: auto 25%;
-
-  }
-  
-  .sub-form{
-    text-align: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin: auto 40%;
-  }
-  
-
-  .button-div{
-    text-align: center;
-    margin-top: 20px;
-    font-family: 'Comic Neue', cursive;
-    color:rgb(231, 230, 230);
-  }
-  
-  .table-data{
-    margin: auto 40%;
-    text-align: center;
-    /* width: 40%; */
-  }
-  
-  .teams-div{
-    padding-top: 50px;
-    text-align: center;
-    margin: auto ;
-    /* border: 1px black solid; */
-  }
-  
-  .teams-header{
-    text-align: center;
-    margin: auto ;
-    /* border: 1px black solid; */
-  }
-
-  .tournament-div {
-    text-align: center;
-    /* border: 1px solid black; */
-    margin: auto 15%;
-    margin-top: 20px;
-    border: none;
-    padding: 15px 15px;
-  }
-  
-  h1{
-    text-align: center;
-    font-size: 48px;
-    font-family: 'Do Hyeon', sans-serif;
-    color: rgb(59, 59, 59);
-  }
-
-  h3 {
-    padding-top: 10px;
-    font-family: 'Do Hyeon', sans-serif;
-    color: rgb(59, 59, 59);
-  }
-
-  p, label, input  {
-    font-family: 'Comic Neue', cursive;
-    font-size: 18px;
-    color: rgb(59, 59, 59);
-  }
-  table {
-    text-align: center;
-    margin-bottom: 10px;
-  }
-  
-  .dropdown{
-    text-align: center;
-    margin: auto 40%;
-  
-  }
-
-  .invisible {
-    display: none;
-    visibility: hidden;
-}
-
-.img-div {
+h1 {
   text-align: center;
-  width: 20%;
-  
+  font-size: 48px;
+  font-family: 'Do Hyeon', sans-serif;
+  color: rgb(59, 59, 59);
 }
 
-.space {
+h3 {
   padding-top: 10px;
+  font-family: 'Do Hyeon', sans-serif;
+  color: rgb(59, 59, 59);
+}
+
+p, label, input {
+  font-family: 'Comic Neue', cursive;
+  font-size: 18px;
+  color: rgb(59, 59, 59);
+}
+
+.center {
+    text-align: center;
+}
+
+.header {
+    text-align: center;
+    margin: 0px 0px 30px 0px; 
 }
 
 .img-header {
   width: 150px;
 }
 
-.footer {
-  text-align: center;
-  margin: auto 15%;
-  margin-top: 20px;
-  border: none;
-}
 .card {
   background-color:rgb(231, 230, 230);
 }
@@ -138,9 +53,62 @@ body {
 .warning {
   color: red;
 }
-  
 
-/* Tournament page */
+.main-form{
+  text-align: center;
+  margin: auto 25%;
+}
+
+.gen-style{
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin: auto 40%;
+}
+
+.button-div{
+  text-align: center;
+  margin-top: 20px;
+  font-family: 'Comic Neue', cursive;
+  color:rgb(231, 230, 230);
+}
+
+.table-data{
+  margin: auto 40%;
+  text-align: center;
+}
+
+.teams-header{
+  text-align: center;
+  margin: auto ;
+}
+
+.tournament-div {
+  text-align: center;
+  margin: auto 15%;
+  margin-top: 20px;
+  border: none;
+  padding: 15px 15px;
+}
+
+.invisible {
+  display: none;
+  visibility: hidden;
+}
+
+.img-div {
+  text-align: center;
+  width: 20%;
+}
+
+.footer {
+  text-align: center;
+  margin: auto 15%;
+  margin-top: 20px;
+  border: none;
+} 
+
+/* Tournament FlexBox */
 .first-face {
   display: flex;
   justify-content: center;
@@ -194,41 +162,3 @@ body {
 .fifth-face .column:nth-of-type(2) {
   justify-content: center;
 }
-
-/* OTHER STYLES */
-.flex-container {
-  /* We first create a flex layout context */
-  display: flex;
-  flex-wrap: nowrap;
-  
-  /* Then we define the flow direction 
-     and if we allow the items to wrap 
-   * Remember this is the same as:
-   * flex-direction: row;
-   * flex-wrap: wrap;
-   */
-  flex-flow: row wrap;
-  
-  /* Then we define how is distributed the remaining space */
-  justify-content: space-around;
-  
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-.flex-item {
-  background: tomato;
-  padding: 5px;
-  width: 150px;
-  height: 100px;
-  margin: 10px 0px;
-  line-height: 150px;
-  color: white;
-  font-weight: bold;
-  font-size: 3em;
-  text-align: center;
-}
-
-
-
