--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ h1 {
   color: rgb(59, 59, 59);
 }
 
-h3 {
+h3, h4 {
   padding-top: 10px;
   font-family: 'Do Hyeon', sans-serif;
   color: rgb(59, 59, 59);
@@ -36,6 +36,10 @@ p, label, input {
 .center {
     text-align: center;
 }
+
+/* .space {
+  padding-top: 60px;
+} */
 
 .header {
     text-align: center;
@@ -63,7 +67,6 @@ p, label, input {
   text-align: center;
   padding-top: 10px;
   padding-bottom: 10px;
-  margin: auto 40%;
 }
 
 .button-div{
@@ -73,11 +76,6 @@ p, label, input {
   color:rgb(231, 230, 230);
 }
 
-.table-data{
-  margin: auto 40%;
-  text-align: center;
-}
-
 .teams-header{
   text-align: center;
   margin: auto ;
@@ -85,7 +83,6 @@ p, label, input {
 
 .tournament-div {
   text-align: center;
-  margin: auto 15%;
   margin-top: 20px;
   border: none;
   padding: 15px 15px;
