--- a/styles.css
+++ b/styles.css
@@ -37,9 +37,9 @@ p, label, input {
     text-align: center;
 }
 
-/* .space {
-  padding-top: 60px;
-} */
+.input {
+  width: 20%;
+}
 
 .header {
     text-align: center;
@@ -67,6 +67,7 @@ p, label, input {
   text-align: center;
   padding-top: 10px;
   padding-bottom: 10px;
+  margin: auto 40%;
 }
 
 .button-div{
@@ -76,6 +77,11 @@ p, label, input {
   color:rgb(231, 230, 230);
 }
 
+.table-data{
+  margin: auto 40%;
+  text-align: center;
+}
+
 .teams-header{
   text-align: center;
   margin: auto ;
@@ -83,6 +89,7 @@ p, label, input {
 
 .tournament-div {
   text-align: center;
+  margin: auto 15%;
   margin-top: 20px;
   border: none;
   padding: 15px 15px;
