--- a/styles.css
+++ b/styles.css
@@ -43,11 +43,11 @@ p, label, input {
 
 .header {
     text-align: center;
-    margin: 0px 0px 30px 0px; 
+    margin: 0px 20% 30px 20%; 
 }
 
-.img-header {
-  width: 150px;
+img {
+  width: 5px;
 }
 
 .card {
@@ -67,7 +67,7 @@ p, label, input {
   text-align: center;
   padding-top: 10px;
   padding-bottom: 10px;
-  margin: auto 40%;
+  /* margin: auto 10%; */
 }
 
 .button-div{
@@ -78,7 +78,7 @@ p, label, input {
 }
 
 .table-data{
-  margin: auto 40%;
+  /* margin: auto 40%; */
   text-align: center;
 }
 
@@ -100,10 +100,7 @@ p, label, input {
   visibility: hidden;
 }
 
-.img-div {
-  text-align: center;
-  width: 20%;
-}
+
 
 .footer {
   text-align: center;
