--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ p, label, input {
 }
 
 img {
-  width: 20%;
+  width: 40%;
 }
 
 .card {
@@ -67,7 +67,7 @@ img {
   text-align: center;
   padding-top: 10px;
   padding-bottom: 10px;
-  /* margin: auto 10%; */
+  margin: auto 10%;
 }
 
 .button-div{
