--- a/styles.css
+++ b/styles.css
@@ -43,12 +43,12 @@ p, label, input {
 
 .header {
     text-align: center;
-    margin: 0px 20% 30px 20%; 
+    margin: 0px 0px 30px 0px; 
 }
 
-img {
+/* img {
   width: 40%;
-}
+} */
 
 .card {
   background-color:rgb(231, 230, 230);
