--- a/public/styles.css
+++ b/public/styles.css
@@ -46,9 +46,13 @@ p, label, input {
     margin: 0px 0px 30px 0px; 
 }
 
-.img-header {
-  width: 150px;
+img {
+  width: 40px;
 }
+
+/* .img-header {
+  width: 0%
+} */
 
 .card {
   background-color:rgb(231, 230, 230);
@@ -67,7 +71,7 @@ p, label, input {
   text-align: center;
   padding-top: 10px;
   padding-bottom: 10px;
-  margin: auto 40%;
+  margin: auto 10%;
 }
 
 .button-div{
@@ -78,7 +82,7 @@ p, label, input {
 }
 
 .table-data{
-  margin: auto 40%;
+  /* margin: auto 40%; */
   text-align: center;
 }
 
@@ -100,10 +104,7 @@ p, label, input {
   visibility: hidden;
 }
 
-.img-div {
-  text-align: center;
-  width: 20%;
-}
+
 
 .footer {
   text-align: center;
