--- a/styles.css
+++ b/styles.css
@@ -50,9 +50,9 @@ img {
   width: 40px;
 }
 
-/* .img-header {
+.img-header {
   width: 0%
-} */
+}
 
 .card {
   background-color:rgb(231, 230, 230);
