--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ p, label, input {
 }
 
 img {
-  width: 80px;
+  width: 18%;
 }
 
 /* .img-header {
@@ -55,7 +55,7 @@ img {
 } */
 
 .card {
-  background-color:rgb(231, 230, 230);
+  background-color:rgb(234, 234, 234);
 }
 
 .warning {
@@ -71,8 +71,16 @@ img {
   text-align: center;
   padding-top: 10px;
   padding-bottom: 10px;
-  margin: auto 10%;
+  margin: auto 30%;
 }
+
+.gen-style2{
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin: auto 20%;
+}
+
 
 .button-div{
   text-align: center;
