--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ h3, h4 {
   color: rgb(59, 59, 59);
 }
 
-p, label, input {
+p, label, input, td {
   font-family: 'Comic Neue', cursive;
   font-size: 18px;
   color: rgb(59, 59, 59);
