--- a/public/styles.css
+++ b/public/styles.css
@@ -27,7 +27,7 @@ h3, h4 {
   color: rgb(59, 59, 59);
 }
 
-p, label, input {
+p, label, input, td {
   font-family: 'Comic Neue', cursive;
   font-size: 18px;
   color: rgb(59, 59, 59);
@@ -47,15 +47,11 @@ p, label, input {
 }
 
 img {
-  width: 40px;
-}
-
-.img-header {
-  width: 0%
+  width: 18%;
 }
 
 .card {
-  background-color:rgb(231, 230, 230);
+  background-color:rgb(234, 234, 234);
 }
 
 .warning {
@@ -71,8 +67,16 @@ img {
   text-align: center;
   padding-top: 10px;
   padding-bottom: 10px;
-  margin: auto 10%;
+  margin: auto 30%;
 }
+
+.gen-style2{
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin: auto 20%;
+}
+
 
 .button-div{
   text-align: center;
@@ -82,7 +86,6 @@ img {
 }
 
 .table-data{
-  /* margin: auto 40%; */
   text-align: center;
 }
 
@@ -103,8 +106,6 @@ img {
   display: none;
   visibility: hidden;
 }
-
-
 
 .footer {
   text-align: center;
